recursion.hanoi.lessons.recursion.hanoi.SplitHanoi3.scala.error
SplitHanoi3:22: error: not enough arguments for method hanoi_fast: (height: Int, src: Int, free: Int, full: Int, dst: Int)Unit.
Unspecified value parameter dst.
  hanoi_fast(getSlotSize(dst1), dst1, src, other)
            ^SplitHanoi3:24: error: not enough arguments for method hanoi_fast: (height: Int, src: Int, free: Int, full: Int, dst: Int)Unit.
Unspecified value parameter dst.
  hanoi_fast(getSlotSize(dst2), dst2, src, dst1)
            ^